--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.ts",
-    "start": "ts-node app.ts",
+    "start": "ts-node index.ts",
     "build": "tsc"
   },
   "keywords": [],
