--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "description": "",
   "dependencies": {
     "axios": "^1.12.2",
+    "canvas": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mysql2": "^3.15.3",
     "sequelize": "^6.37.7",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize-typescript": "^2.1.6",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/express": "^5.0.4",
